--- a/sanity/package.json
+++ b/sanity/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "sanityio",
+  "name": "sanity",
   "private": true,
   "version": "1.0.0",
   "main": "package.json",
@@ -15,11 +15,11 @@
     "sanity"
   ],
   "dependencies": {
-    "@sanity/vision": "^3.11.5",
+    "@sanity/vision": "^3.12.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-is": "^18.2.0",
-    "sanity": "^3.11.5",
+    "sanity": "^3.12.0",
     "styled-components": "^5.3.9"
   },
   "devDependencies": {
